--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 
 ## Generated if empty string is given at "Please type another file name for output:"
 LDM-672.pdf
+meta.tex
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
